--- a/src/main/resources/errorMessage.properties
+++ b/src/main/resources/errorMessage.properties
@@ -1,3 +1,4 @@
+ID_BLANK=Session error
 MIN_NOT_NUMBER=Minimal played game count must be a number
 GUESS_BLANK=Guess must not be blank
 GUESS_NOT_NUMBER=Guess must be a number
